# blueplane

./: .gitignore  CMakeLists.txt  README.md  main.cpp
api/: media.grpc.pb.cc  media.grpc.pb.h  media.pb.cc  media.pb.go  media.pb.h  producer.grpc.pb.cc  producer.grpc.pb.h  producer.pb.cc  producer.pb.go  producer.pb.h  producer_grpc.pb.go
connector/grpc/: GrpcService.cpp  GrpcService.h
connector/include/: private.h
connector/producer/: Producer.h  RtspProducer.cpp  RtspProducer.h
muduo/: CMakeLists.txt  README.md  example.cpp
muduo/base/: CurrentThread.cpp  CurrentThread.h  Logging.cpp  Logging.h  Types.h
muduo/net/: Acceptor.cpp  Acceptor.h  Buffer.h  Callbacks.h  Channel.cpp  Socket.cpp  SocketsOps.cpp  TcpSocket.cpp  TcpSocket.h  UdpSocket.cpp  UdpSocket.h
pinkwing/: CMakeLists.txt  README.md  example.cpp
pinkwing/onvif/: soapActionEngineBindingProxy.cpp  soapActionEngineBindingProxy.h  soapAnalyticsDeviceBindingProxy.cpp  soapAnalyticsDeviceBindingProxy.h  soapClient.cpp  soapDeviceBindingProxy.cpp  soapDeviceBindingProxy.h  soapDeviceIOBindingProxy.cpp  soapDeviceIOBindingProxy.h  soapDisplayBindingProxy.cpp  soapDisplayBindingProxy.h  soapDoorControlBindingProxy.cpp  soapDoorControlBindingProxy.h  soapImagingBindingProxy.cpp  soapImagingBindingProxy.h  soapMediaBindingProxy.cpp  soapMediaBindingProxy.h  soapPACSBindingProxy.cpp  soapPACSBindingProxy.h  soapPTZBindingProxy.cpp  soapPTZBindingProxy.h  soapPullPointSubscriptionBindingProxy.cpp  soapPullPointSubscriptionBindingProxy.h  soapReceiverBindingProxy.cpp  soapReceiverBindingProxy.h  soapRecordingBindingProxy.cpp  soapRecordingBindingProxy.h  soapRemoteDiscoveryBindingProxy.cpp  soapRemoteDiscoveryBindingProxy.h  soapReplayBindingProxy.cpp  soapReplayBindingProxy.h  soapRuleEngineBindingProxy.cpp  soapRuleEngineBindingProxy.h  soapSearchBindingProxy.cpp  soapSearchBindingProxy.h  soapwsddProxy.cpp  soapwsddProxy.h  stdsoap2.cpp  wsdd.nsmap  wsseapi.c
pinkwing/rtcp/: RtcpPrivate.h  RtcpSession.cpp
pinkwing/rtp/: RtpPayload.h  RtpPayloadH264.cpp  RtpPayloadH264.h  RtpPayloadPs.h  RtpPayloadS16LE.h  RtpPayloadSvac.cpp  RtpPayloadSvac.h
pinkwing/rtsp/: RtspAuth.h  RtspClient.cpp  RtspClient.h  RtspServer.h
proto/: media.proto  producer.proto
protocol/onvif/: stdsoap2.cpp  wsdd.nsmap
protocol/rtcp/: RtcpSession.h
protocol/rtp/: RtpPayload.cpp  RtpPayloadFactory.cpp  RtpPayloadFactory.h  RtpPayloadH265.cpp  RtpPayloadH265.h  RtpPayloadPcm.cpp  RtpPayloadPcm.h  RtpPayloadPs.cpp  RtpPayloadS16LE.cpp  RtpPrivate.h  RtpSession.cpp  RtpSession.h
protocol/rtsp/: PubBase64.cpp  PubBase64.h  (+5 more)
redpig/: CMakeLists.txt  example.cpp
redpig/base/: Logging.cpp  StringPiece.h
redpig/net/: Acceptor.cpp  Buffer.cpp  Buffer.h  InetAddress.cpp  InetAddress.h  Socket.h  SocketsOps.cpp  SocketsOps.h  TcpSocket.cpp  UdpSocket.h
(+33 files in other folders)
